# incident-commander-agent

./: .dockerignore  Dockerfile
server/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  railway.json  requirements.txt
server/dynatrace_mcp/: __init__.py  agents.py  base_agent.py  chat_agent.py  dynatrace_client.py  mock_data.py  server.py  slack_notifier.py
server/scripts/: post_mock_requests.py
