[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynatrace-mcp-server"
version = "1.0.0"
description = "Dynatrace MCP Server for incident management"
requires-python = ">=3.11"
dependencies = [
    "mcp>=0.1.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "google-genai>=1.0.0",
    "google-adk>=2.0.0",
    "httpx>=0.24.0",
]

[tool.setuptools]
packages = ["dynatrace_mcp"]
